# Ppois-labs

./: README.md  aois lab 1
aoislab1/: CMakeLists.txt  bcd2421.cpp  bcd2421.h  binary_operations.cpp  binary_operations.h  ieee754.cpp
include/: Set.h
lab1/: CMakeLists.txt  coverage.info  coverage_analyzer.sh  coverage_filtered.info
lab1/coverage_report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
lab1/coverage_report/src/: Markov.cpp.func-c.html  Markov.cpp.func.html  Markov.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lab1/include/: Markov.h  Rule.h
lab1/markov_algorithm/: coverage_analyser.sh
lab1/markov_algorithm/src/: Markov.cpp  Rule.cpp
lab1/markov_algorithm/tests/: markov_algorithm_tests.cpp
lab1/set/: CMakeLists.txt  coverage_analyser.cpp  main.cpp
lab1/set/include/: Set.h
lab1/set/src/: Set.cpp
lab1/set/tests/: set_tests.cpp
lab1/setlib/src/: Set.cpp
lab1/setlib/tests/: .gitignore  CMakeLists.txt  Doxyfile  test_set.cpp
lab1/tests/: markov_algorithm_tests.cpp
lab3/customers/: Order.py  __init__.py  discount.py  sales_manager.py  sales_report.py  Сustomer.py
lab3/finance/: Expense.py  Payment.py  __init__.py  budget.py  finance_department.py  invoice.py
lab3/management/: Manager.py  ProductionPlan.py  __init__.py  department.py  director.py  factory.py
lab3/personnel/: Accountant.py  QualityInspector.py  Shift.py  __init__.py  employee.py  engineer.py  work_schedule.py  worker.py
lab3/production/: Machine.py  MachineOperation.py  ProductionOrder.py  ProductionReport.py  __init__.py  batch.py  maintenance_request.py  maintenance_schedule.py  production_line.py
lab3/products/: Component.py  MaterialRequest.py  Price.py  PriceList.py  Product.py  ProductSpecification.py  __init__.py  raw_material.py
lab3/quality/: TechnicalDocumentation.py  __init__.py  quality_control.py
lab3/suppliers/: Contract.py  PurchaseOrder.py  __init__.py  delivery.py  supplier.py
lab3/tests/customers/: test_customer.py  test_discount.py  test_order.py  test_sales_manager.py  test_sales_report.py
lab3/tests/finance/: test_budget.py  test_expense.py  test_finance_department.py  test_invoice.py  test_payment.py
lab3/tests/management/: test_department.py  test_director.py  test_factory.py  test_manager.py  test_production_plan.py
lab3/tests/personnel/: test_accountant.py  test_employee.py  test_engineer.py  test_quality_inspector.py  test_shift.py  test_work_schedule.py  test_worker.py
lab3/tests/production/: test_batch.py  test_machine_operation.py  test_maintenance_request.py  test_production_line.py  test_production_order.py
lab3/tests/products/: test_material_request.py  test_price.py  test_price_list.py  test_product.py  test_raw_material.py
lab3/tests/quality/: test_quality_control.py  test_technical_documentation.py
lab3/tests/suppliers/: test_contract.py  test_contract_term.py  test_purchase_order.py  test_supplier.py
lab3/warehouse/: StorageLocation.py  Warehouse.py
(+4 files in other folders)
